pathing/box: move box definition and count to TRX
This moves the BOX definition to TRX, along with the box count
variable. Box access will be migrated in its own commit.

--- a/src/libtrx/meson.build
+++ b/src/libtrx/meson.build
@@ -151,6 +151,7 @@ sources = [
   'game/output/common.c',
   'game/output/textures.c',
   'game/packer.c',
+  'game/pathing/box.c',
   'game/phase/executor.c',
   'game/phase/phase_cutscene.c',
   'game/phase/phase_demo.c',
