tr2/commands: add /wireframe and /cheats
Resolves #2500.

--- a/src/tr2/meson.build
+++ b/src/tr2/meson.build
@@ -94,6 +94,7 @@ sources = [
   'game/camera.c',
   'game/clock.c',
   'game/collide.c',
+  'game/console/cmd/easy_config.c',
   'game/console/common.c',
   'game/creature.c',
   'game/cutscene.c',
