movable_block: handle pushblocks collectively
This migrates handling of pushblock floor manipulation to a collective
organisation of calls, whereby we process blocks based on Y position.
This prevents issues with adjusting floors too early or too late.

--- a/src/libtrx/meson.build
+++ b/src/libtrx/meson.build
@@ -147,6 +147,7 @@ sources = [
   'game/music.c',
   'game/objects/common.c',
   'game/objects/names.c',
+  'game/objects/traps/movable_block.c',
   'game/objects/vars.c',
   'game/output/common.c',
   'game/output/textures.c',
